@@ -106,6 +106,8 @@
           </xs:simpleContent>
         </xs:complexType>
       </xs:element>
+      <xs:element name="damageresistance" type="xs:string" minOccurs="0" maxOccurs="1" />
+      <xs:element name="depenabled" type="xs:string" minOccurs="0" maxOccurs="1" />
       <xs:element name="ess" minOccurs="0" maxOccurs="unbounded">
         <xs:complexType>
           <xs:simpleContent>
